Error fixing, next controllers
